# muav

./: .gitignore  README.md  depth.txt  realsense_image_processorv1.py  usage.md
debug/: depth_latest.npy
shfiles/: rspx4.sh
src/langguide/: CMakeLists.txt  package.xml
src/langguide/scripts/: langguide_node.py  lcmdpublisher.py  test_plan_point_publisher.py
src/langguide/scripts/egovlm/: commend  egovlm_module.py  main.py  requirements.txt
src/langguide/scripts/egovlm/lib/: cloud_utils.py  img_utils.py  lsamclient.py  mlm.py  solve.py  vls.py
src/langguide/scripts/egovlm/oldlog/20251103_104756/: capture_log.txt  depth_image.npy
src/langguide/scripts/egovlm/prompt/: plan_promptv2.txt
src/planner/plan_manage/: CMakeLists.txt
src/planner/plan_manage/launch/: advanced_param_exp.xml  rviz.launch  single_run_in_exp.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  test_plan_point_listener.cpp
src/pointguider/: commend  plan.py  test.py
src/pointguider/lib/: cloud_utils.py  clouddisplay.py  img_utils.py  log_utils.py  lsamclient.py  prompt_utils.py  rosrgbd.py  solve.py  vls.py
src/pointguider/prompt/: detect_prompt.txt  plan_promptv1.txt
src/realflight_modules/VINS-Fusion/config/: fast_drone_250.yaml  left.yaml  right.yaml
src/utils/quadrotor_msgs/: CMakeLists.txt
src/utils/quadrotor_msgs/msg/: LangCommand.msg
vins_output/: bias.txt  extrinsic_parameter.txt  stamped_traj_estimate.txt
web_dashboard/: app.py  requirements.txt
web_dashboard/static/css/: style.css
web_dashboard/static/js/: app.js
web_dashboard/templates/: index.html
(+2 files in other folders)
